Desna poravnava besedil

--- a/stroboskop.html
+++ b/stroboskop.html
@@ -14,6 +14,7 @@
 	<table style="width: 100%;">
 		<tr>
 			<td style="width: 200px;">
+				<div style="text-align:right"></div>
 				Izberi barve:
 			</td>
 			<td style="width: calc(100% - 20px);">
@@ -26,6 +27,7 @@
 		</tr>
 		<tr>
 			<td>
+				<div style="text-align:right"></div>
 				Časovni interval: 
 			</td>
 			<td>
